testpod/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ok-svc
  namespace: testpod
spec:
  ports:
  - name: 8088-8088
    port: 8088
    protocol: TCP
    targetPort: 8088
  selector:
    run: testpod
  type: ClusterIP
